--- a/Webserver/templates/test.html
+++ b/Webserver/templates/test.html
@@ -37,12 +37,12 @@
         <button id="refreshProperties">Refresh Properties</button>
     </div>
 
-    <!-- <div class="option">
-        <input id="use-stun" type="checkbox" />
-        <label for="use-stun">Use STUN server</label>
-    </div>
-    <button id="start" onclick="start()" disabled>Start</button>
-    <button id="stop" style="display: none" onclick="stop()">Stop</button> -->
+    <p id="sdpInstuctions">Please enter the offer provided to you by the receiver application: </p>
+    <textarea id="sdpTextBox" cols="80" rows="10"></textarea>
+
+        <!-- 
+        <button id="start" onclick="start()" disabled>Start</button>
+        <button id="stop" style="display: none" onclick="stop()">Stop</button> -->
 
     <h2>Audio Device Info:</h2>
     <h3>Devices:</h3>
@@ -64,8 +64,8 @@
         <audio id="audio" autoplay></audio>
     </div>
 
-    <h2>Data Channel</h2>
-    <pre id="data-channel" style="height: 200px;"></pre>
+    <!-- <h2>Data Channel</h2>
+    <pre id="data-channel" style="height: 200px;"></pre> -->
 
     <h2>SDP</h2>
 
@@ -75,7 +75,7 @@
     <h3>Answer</h3>
     <pre id="answer-sdp"></pre>
 
-    <script src="client.js"></script>
+    <script src="static/client.js"></script>
 </body>
 
 </html>
