--- a/Webserver/templates/login.html
+++ b/Webserver/templates/login.html
@@ -50,7 +50,7 @@
         <h2>Login</h2>
         <form action="" method="post"> 
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="username" name="username" required autofocus>
             <br>
             <button type="submit">Login</button>
         </form>
