basic user listing

--- a/Webserver/templates/index.html
+++ b/Webserver/templates/index.html
@@ -70,7 +70,7 @@
         <select id="audioOutput" name="audioOutput" required></select>
 
         <label for="volume">Volume:</label>
-        <input type="range" id="volume" name="volume" min="0" max="100" value="50">
+        <input type="range" disabled id="volume" name="volume" min="0" max="100" value="50">
 
         <button type="button" id="startStream" onclick="startConnection()">Start</button>
         <button type="button" id="stopStream" onclick="stopConnection()">Stop</button>
